--- a/.github/workflows/publish-public.yml
+++ b/.github/workflows/publish-public.yml
@@ -48,6 +48,7 @@ jobs:
         PUBLISH_TOKEN: ${{ secrets.PUBLISH_TOKEN_PUBLIC }}
         GITHUB_REPOSITORY: ${{ vars.GITHUB_REPOSITORY }}
         FORK_ID: ${{ vars.FORK_ID_PUBLIC }}
+        CDN_URL: ${{ vars.CDN_URL }}
 
 #    - name: Publish changelog (Discord)
 #      run: Tools/actions_changelogs_since_last_run.py
